Revised to correctly read overall first and last home games of season
Fence posts make Eeyore SAD.

--- a/3. Load event data.ipynb
+++ b/3. Load event data.ipynb
@@ -2,19 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "imported\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#import zipfile\n",
     "import numpy as np\n",
@@ -29,20 +21,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ok\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# import list of teams from retrosheet\n",
     "teams_df = pandas.DataFrame.from_csv('teams.csv')\n",
@@ -54,71 +38,29 @@
     "teams_df['lastYear'] = teams_df['lastYear'].fillna(2016)\n",
     "\n",
     "teams_df = teams_df.fillna('')\n",
-    "print('ok')"
+    "print('ok')\n",
+    "#teams_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "scrolled": true
+    "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "files identified\n",
-      "retrosheet/2016ANA.EVA\n",
-      "retrosheet/2016ARI.EVN\n",
-      "retrosheet/2016ATL.EVN\n",
-      "retrosheet/2016BAL.EVA\n",
-      "retrosheet/2016BOS.EVA\n",
-      "retrosheet/2016CHA.EVA\n",
-      "retrosheet/2016CHN.EVN\n",
-      "retrosheet/2016CIN.EVN\n",
-      "retrosheet/2016CLE.EVA\n",
-      "retrosheet/2016COL.EVN\n",
-      "retrosheet/2016DET.EVA\n",
-      "retrosheet/2016HOU.EVA\n",
-      "retrosheet/2016KCA.EVA\n",
-      "retrosheet/2016LAN.EVN\n",
-      "retrosheet/2016MIA.EVN\n",
-      "retrosheet/2016MIL.EVN\n",
-      "retrosheet/2016MIN.EVA\n",
-      "retrosheet/2016NYA.EVA\n",
-      "retrosheet/2016NYN.EVN\n",
-      "retrosheet/2016OAK.EVA\n",
-      "retrosheet/2016PHI.EVN\n",
-      "retrosheet/2016PIT.EVN\n",
-      "retrosheet/2016SDN.EVN\n",
-      "retrosheet/2016SEA.EVA\n",
-      "retrosheet/2016SFN.EVN\n",
-      "retrosheet/2016SLN.EVN\n",
-      "retrosheet/2016TBA.EVA\n",
-      "retrosheet/2016TEX.EVA\n",
-      "retrosheet/2016TOR.EVA\n",
-      "retrosheet/2016WAS.EVN\n",
-      "All games processed...\n",
-      "File written: raw/events_raw_2016.json\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "allfiles = []\n",
     "allgames = []\n",
-    "gamecount = 0\n",
+    "gamecount = -1  # MUST START AT -1\n",
     "\n",
     "ladj_games = []\n",
     "badj_games = []\n",
     "padj_games = []\n",
     "\n",
-    "#yeararray = np.linspace(1921,2016,96)\n",
-    "#yeararray = np.linspace(2010,2019,10)\n",
-    "yeararray = [2016]\n",
+    "yeararray = np.linspace(1921,2016,96)\n",
+    "#yeararray = [2015]\n",
+    "\n",
     "for thisyear in yeararray:\n",
     "    allfiles = []\n",
     "    teams_this_year_df = teams_df[(teams_df['firstYear'] <= thisyear) & (teams_df['lastYear'] >= thisyear)]\n",
@@ -129,20 +71,18 @@
     "        if (afile in (os.listdir('retrosheet/'))):\n",
     "            allfiles.append('retrosheet/'+afile)\n",
     "    print('files identified')\n",
-    "#print(allfiles)\n",
-    "\n",
-    "\n",
-    "    #allfiles=['retrosheet/1995MON.EVN']\n",
+    "    \n",
     "    for filename in allfiles:\n",
-    "        print(filename)\n",
+    "#        print('Parsing file: ',filename)\n",
     "        for line in io.open(filename,encoding='utf-8').readlines():\n",
     "            linearray = line.split(',')\n",
-    "    #        print(linearray)\n",
+    "#            print('BEFORE: ',linearray, '\\n')\n",
     "            linearray[-1] = linearray[-1][0:-1]  # cut off newline character\n",
+    "#            print('AFTER chopping of newline: ',linearray, '\\n')\n",
     "            if (linearray[0] == 'id'):\n",
     "                # 'id' starts the next game, so immediately advance gamecount  \n",
-    "                # record prior game data by adding it to the gamelogs list, unless gamecount = -1\n",
-    "                if (gamecount > 0):\n",
+    "                # record prior game data by adding it to the gamelogs list, unless gamecount = 0 in which case no data yet\n",
+    "                if (gamecount >= 0):\n",
     "                    thisgamedict['info'] = info_dict\n",
     "                    thisgamedict['visiting_starters'] = vis_start_list.tolist()\n",
     "                    thisgamedict['home_starters'] = home_start_list.tolist()\n",
@@ -153,6 +93,7 @@
     "\n",
     "                # advance the gamecount and initialize a new game\n",
     "                gamecount = gamecount + 1\n",
+    "#                print('Parsing game number {0:,.0f} (0-based counting)'.format(gamecount))\n",
     "                thisgamedict = {}\n",
     "                info_dict = {}\n",
     "                start_dict = {}\n",
@@ -254,24 +195,21 @@
     "                events = np.vstack((events,thisevent))\n",
     "                eventnum = eventnum + 1\n",
     "\n",
-    "    print('All games processed...')\n",
+    "    # add data for the final game, which we missed above\n",
+    "    thisgamedict['info'] = info_dict\n",
+    "    thisgamedict['visiting_starters'] = vis_start_list.tolist()\n",
+    "    thisgamedict['home_starters'] = home_start_list.tolist()\n",
+    "    thisgamedict['events'] = events.tolist()\n",
+    "    thisgamedict['data'] = data_list.tolist()\n",
+    "    allgames.append(thisgamedict)\n",
+    "\n",
+    "    print('{0:.0f}: processed {1:,.0f} games!'.format(thisyear,len(allgames)))\n",
     "\n",
     "    outfilename = 'raw/events_raw_{:.0f}.json'.format(thisyear)\n",
     "    with open(outfilename, 'w') as f:\n",
     "        json.dump(allgames, f)\n",
     "    print('File written:',outfilename)\n",
     "    print('\\n')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "len(allgames)"
    ]
   },
   {
