Getting all derived games into one derived events file

--- a/4. Add derived games.ipynb
+++ b/4. Add derived games.ipynb
@@ -2,19 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "imported\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#import zipfile\n",
     "import numpy as np\n",
@@ -29,24 +21,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Derived game files identified\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "derivedfiles = []\n",
     "\n",
     "#yeararray = np.linspace(1921,2016,96)\n",
-    "yeararray = [1970]\n",
+    "yeararray = []\n",
+    "for i in np.linspace(1942,1959,18):\n",
+    "    yeararray.append(i)\n",
+    "for i in np.linspace(1962,1968,7):\n",
+    "    yeararray.append(i)\n",
+    "for i in np.linspace(1971,1973,3):\n",
+    "    yeararray.append(i)\n",
+    "#print(yeararray)\n",
     "\n",
     "for oneyear in yeararray:\n",
     "    for itsleague in ['A', 'N']:\n",
@@ -54,28 +45,20 @@
     "        if (os.path.isfile(afile)):\n",
     "            derivedfiles.append(afile)\n",
     "\n",
-    "#print(derivedfiles)\n",
-    "print('Derived game files identified')"
+    "print(derivedfiles)\n",
+    "#print('Derived game files identified')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 derived games found and processed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "derivedgames = []\n",
-    "gamecount = 0\n",
+    "gamecount = -1\n",
     "\n",
     "for filename in derivedfiles:\n",
     "#    print(filename)\n",
@@ -86,7 +69,7 @@
     "        if (linearray[0] == 'id'):\n",
     "            # 'id' starts the next game, so immediately advance gamecount  \n",
     "            # record prior game data by adding it to the gamelogs list, unless gamecount = -1\n",
-    "            if (gamecount > 0):\n",
+    "            if (gamecount >= 0):\n",
     "                thisgamedict['info'] = info_dict\n",
     "                thisgamedict['visiting_starters'] = vis_start_list.tolist()\n",
     "                thisgamedict['home_starters'] = home_start_list.tolist()\n",
@@ -198,8 +181,74 @@
     "            events = np.vstack((events,thisevent))\n",
     "            eventnum = eventnum + 1\n",
     "\n",
-    "print('{0:,.0f} derived games found and processed'.format(len(derivedgames)))"
+    "thisgamedict['info'] = info_dict\n",
+    "thisgamedict['visiting_starters'] = vis_start_list.tolist()\n",
+    "thisgamedict['home_starters'] = home_start_list.tolist()\n",
+    "thisgamedict['events'] = events.tolist()\n",
+    "thisgamedict['data'] = data_list.tolist()\n",
+    "# append the dictionary describing this game to the list of games\n",
+    "derivedgames.append(thisgamedict)\n",
+    "\n",
+    "print('{0:,.0f} derived games found and processed'.format(len(derivedgames)))\n",
+    "\n",
+    "with open('derived_events.json', 'w') as f:\n",
+    "    json.dump(allevents, f)\n",
+    "print('Derived events file saved')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -226,21 +275,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loaded events data for 53,044 events\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "with open('raw/events_raw_1970.json','r') as f:\n",
+    "with open('raw/events_raw_1942.json','r') as f:\n",
     "    allevents = json.load(f)\n",
     "print('Loaded events data for {0:,.0f} events'.format(len(allevents)))"
    ]
