Changed name of destination file

--- a/4. Add derived games.ipynb
+++ b/4. Add derived games.ipynb
@@ -2,11 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "imported\n"
+     ]
+    }
+   ],
    "source": [
     "#import zipfile\n",
     "import numpy as np\n",
@@ -21,11 +29,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['retrosheet/1942.EDA', 'retrosheet/1942.EDN', 'retrosheet/1943.EDA', 'retrosheet/1943.EDN', 'retrosheet/1944.EDA', 'retrosheet/1944.EDN', 'retrosheet/1945.EDA', 'retrosheet/1945.EDN', 'retrosheet/1946.EDA', 'retrosheet/1946.EDN', 'retrosheet/1947.EDA', 'retrosheet/1947.EDN', 'retrosheet/1948.EDA', 'retrosheet/1948.EDN', 'retrosheet/1949.EDA', 'retrosheet/1949.EDN', 'retrosheet/1950.EDA', 'retrosheet/1950.EDN', 'retrosheet/1951.EDA', 'retrosheet/1951.EDN', 'retrosheet/1952.EDA', 'retrosheet/1952.EDN', 'retrosheet/1953.EDA', 'retrosheet/1953.EDN', 'retrosheet/1954.EDA', 'retrosheet/1954.EDN', 'retrosheet/1955.EDA', 'retrosheet/1955.EDN', 'retrosheet/1956.EDA', 'retrosheet/1956.EDN', 'retrosheet/1957.EDA', 'retrosheet/1957.EDN', 'retrosheet/1958.EDA', 'retrosheet/1958.EDN', 'retrosheet/1959.EDA', 'retrosheet/1959.EDN', 'retrosheet/1962.EDA', 'retrosheet/1963.EDN', 'retrosheet/1964.EDN', 'retrosheet/1965.EDN', 'retrosheet/1966.EDN', 'retrosheet/1967.EDN', 'retrosheet/1968.EDN', 'retrosheet/1971.EDN', 'retrosheet/1972.EDN', 'retrosheet/1973.EDN']\n"
+     ]
+    }
+   ],
    "source": [
     "derivedfiles = []\n",
     "\n",
@@ -51,11 +67,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2,419 derived games found and processed\n",
+      "Derived events file saved\n"
+     ]
+    }
+   ],
    "source": [
     "derivedgames = []\n",
     "gamecount = -1\n",
@@ -191,8 +216,8 @@
     "\n",
     "print('{0:,.0f} derived games found and processed'.format(len(derivedgames)))\n",
     "\n",
-    "with open('derived_events.json', 'w') as f:\n",
-    "    json.dump(allevents, f)\n",
+    "with open('raw/derived_events_raw.json', 'w') as f:\n",
+    "    json.dump(derivedgames, f)\n",
     "print('Derived events file saved')"
    ]
   },
