Revised to work with dicts instead of lists/arrays
As suggested by Manu at ADASS

--- a/5. Get game info from original events file.ipynb
+++ b/5. Get game info from original events file.ipynb
@@ -6,18 +6,28 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ok\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
-    "import numpy\n",
+    "import numpy as np\n",
     "import pandas\n",
     "from pprint import pprint\n",
-    "pandas.options.display.max_colwidth = -1"
+    "from datetime import datetime, timedelta\n",
+    "pandas.options.display.max_colwidth = -1\n",
+    "print('ok')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -26,10 +36,148 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "done\n"
+      "years identified\n",
+      "raw/events_raw_2016.json\n",
+      "2,428 games found\n",
+      "Reading game number 0\n",
+      "Reading game number 100\n",
+      "Reading game number 200\n",
+      "Reading game number 300\n",
+      "Reading game number 400\n",
+      "Reading game number 500\n",
+      "Reading game number 600\n",
+      "Reading game number 700\n",
+      "Reading game number 800\n",
+      "Reading game number 900\n",
+      "Reading game number 1,000\n",
+      "Reading game number 1,100\n",
+      "Reading game number 1,200\n",
+      "Reading game number 1,300\n",
+      "Reading game number 1,400\n",
+      "Reading game number 1,500\n",
+      "Reading game number 1,600\n",
+      "Reading game number 1,700\n",
+      "Reading game number 1,800\n",
+      "Reading game number 1,900\n",
+      "Reading game number 2,000\n",
+      "Reading game number 2,100\n",
+      "Reading game number 2,200\n",
+      "Reading game number 2,300\n",
+      "Reading game number 2,400\n",
+      "Reading game number 2,427\n",
+      "finished reading data\n",
+      "output written\n"
      ]
     }
    ],
+   "source": [
+    "allgames = []\n",
+    "#yeararray = [1921, 1922, 1925, 1927, 1928]\n",
+    "#for i in np.linspace(1930,2016,87):\n",
+    "#    yeararray.append(i)\n",
+    "yeararray = [2016]\n",
+    "    \n",
+    "years_with_derived = []\n",
+    "for i in np.linspace(1942,1959,18):\n",
+    "    years_with_derived.append(i)\n",
+    "for i in np.linspace(1962,1968,7):\n",
+    "    years_with_derived.append(i)\n",
+    "for i in np.linspace(1971,1973,3):\n",
+    "    years_with_derived.append(i)\n",
+    "print('years identified')\n",
+    "    \n",
+    "for thisyear in yeararray:\n",
+    "#    print('Starting to parse the year {0:.0f}'.format(thisyear))\n",
+    "    filename = 'raw/events_raw_{0:.0f}.json'.format(thisyear)\n",
+    "    print(filename)\n",
+    "    with open(filename,'r') as f:\n",
+    "        games = json.load(f)\n",
+    "    if (thisyear in years_with_derived):\n",
+    "        derived_filename = 'with_derived/events_with_derived_{0:.0f}.json'.format(thisyear)\n",
+    "        print(derived_filename)\n",
+    "        with open(derived_filename,'r') as f:\n",
+    "            games_derived = json.load(f)\n",
+    "        games = games + games_derived\n",
+    "    allgames = allgames + games\n",
+    "\n",
+    "#    games_df = pandas.DataFrame(games)\n",
+    "#    games_df = games_df.set_index('id')\n",
+    "    print('{0:,.0f} games found'.format(len(allgames)))\n",
+    "\n",
+    "    allgames_df = pandas.DataFrame()\n",
+    "    for i in range(0, len(allgames)):\n",
+    "        if ((np.mod(i, 100) == 0) | (i==len(allgames)-1)):\n",
+    "            print('Reading game number {0:,.0f}'.format(i))\n",
+    "        game_df = pandas.DataFrame.from_records(allgames[i]['info'], index=[allgames[i]['id']])\n",
+    "        allgames_df = pandas.concat((allgames_df, game_df))\n",
+    "    allgames_df.index.name = 'gameID'\n",
+    "\n",
+    "    allgames_df['attendance'] = pandas.to_numeric(allgames_df['attendance'], errors='coerce')\n",
+    "    allgames_df['date'] = pandas.to_datetime(allgames_df['date'], format='%Y/%m/%d', errors='coerce')\n",
+    "    allgames_df['number'] = pandas.to_numeric(allgames_df['number'], errors='coerce')\n",
+    "    allgames_df['starttime'] = pandas.to_datetime(allgames_df['starttime'], format='%I:%M%p', errors='coerce')\n",
+    "    allgames_df['temp'] = pandas.to_numeric(allgames_df['temp'], errors='coerce')\n",
+    "    allgames_df['timeofgame'] = pandas.to_numeric(allgames_df['timeofgame'], errors='coerce').dropna().apply(lambda x: timedelta(minutes=x))\n",
+    "    allgames_df['windspeed'] = pandas.to_numeric(allgames_df['windspeed'], errors='coerce')\n",
+    "    print('finished reading data')\n",
+    "    #allgames_df.tail(3).transpose()\n",
+    "    allgames_df.to_csv('games/gameinfo_from_events_{0:.0f}.csv'.format(thisyear))\n",
+    "    print('output written')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "# runs in about 5 minutes\n",
     "with open('events_with_derived.json','r') as f:\n",
@@ -45,19 +193,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "info_df = pandas.DataFrame.from_records(allgames_df['info'], index=allgames_df.index)\n",
     "\n",
