--- a/3. Load event data.ipynb
+++ b/3. Load event data.ipynb
@@ -2,11 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "imported\n"
+     ]
+    }
+   ],
    "source": [
     "#import zipfile\n",
     "import numpy as np\n",
@@ -21,12 +29,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ok\n"
+     ]
+    }
+   ],
    "source": [
     "# import list of teams from retrosheet\n",
     "teams_df = pandas.DataFrame.from_csv('teams.csv')\n",
@@ -58,11 +74,15 @@
     "badj_games = []\n",
     "padj_games = []\n",
     "\n",
-    "yeararray = np.linspace(1921,2016,96)\n",
-    "#yeararray = [2015]\n",
+    "yeararray = [1921, 1922, 1925, 1927, 1928]\n",
+    "for i in np.linspace(1930,2016,87):\n",
+    "    yeararray.append(i)\n",
     "\n",
     "for thisyear in yeararray:\n",
+    "    print('Starting to parse the year {0:.0f}...'.format(thisyear))\n",
     "    allfiles = []\n",
+    "    allgames = []\n",
+    "    gamecount = -1  # MUST START AT -1\n",
     "    teams_this_year_df = teams_df[(teams_df['firstYear'] <= thisyear) & (teams_df['lastYear'] >= thisyear)]\n",
     "    for oneindex, oneteam in teams_this_year_df.iterrows():\n",
     "        oneteamname = oneteam[0]\n",
@@ -70,24 +90,22 @@
     "        afile = '{:.0f}'.format(thisyear)+oneteamname+'.EV'+itsleague\n",
     "        if (afile in (os.listdir('retrosheet/'))):\n",
     "            allfiles.append('retrosheet/'+afile)\n",
-    "    print('files identified')\n",
+    "#    print('files identified')\n",
     "    \n",
     "    for filename in allfiles:\n",
     "#        print('Parsing file: ',filename)\n",
     "        for line in io.open(filename,encoding='utf-8').readlines():\n",
     "            linearray = line.split(',')\n",
-    "#            print('BEFORE: ',linearray, '\\n')\n",
     "            linearray[-1] = linearray[-1][0:-1]  # cut off newline character\n",
-    "#            print('AFTER chopping of newline: ',linearray, '\\n')\n",
     "            if (linearray[0] == 'id'):\n",
     "                # 'id' starts the next game, so immediately advance gamecount  \n",
     "                # record prior game data by adding it to the gamelogs list, unless gamecount = 0 in which case no data yet\n",
     "                if (gamecount >= 0):\n",
     "                    thisgamedict['info'] = info_dict\n",
-    "                    thisgamedict['visiting_starters'] = vis_start_list.tolist()\n",
-    "                    thisgamedict['home_starters'] = home_start_list.tolist()\n",
-    "                    thisgamedict['events'] = events.tolist()\n",
-    "                    thisgamedict['data'] = data_list.tolist()\n",
+    "                    thisgamedict['visiting_starters'] = vis_start_list\n",
+    "                    thisgamedict['home_starters'] = home_start_list\n",
+    "                    thisgamedict['events'] = events\n",
+    "                    thisgamedict['data'] = data_list\n",
     "                    # append the dictionary describing this game to the list of games\n",
     "                    allgames.append(thisgamedict)\n",
     "\n",
@@ -97,12 +115,13 @@
     "                thisgamedict = {}\n",
     "                info_dict = {}\n",
     "                start_dict = {}\n",
-    "                vis_start_list = np.empty((0,4),dtype=object)\n",
-    "                home_start_list = np.empty((0,4),dtype=object)\n",
-    "                vis_sub_list = np.empty((0,4),dtype=object)\n",
-    "                home_sub_list = np.empty((0,4),dtype=object)\n",
-    "                events = np.empty((0,12),dtype=object)\n",
-    "                data_list = np.empty((0,2),dtype=object)\n",
+    "                vis_start_list = []\n",
+    "                home_start_list = []\n",
+    "                vis_sub_list = []\n",
+    "                home_sub_list = []\n",
+    "                events = []\n",
+    "#                events = np.empty((0,12),dtype=object)\n",
+    "                data_list = []\n",
     "                eventnum = 1\n",
     "\n",
     "                # the first thing to go into the new game is the game id.\n",
@@ -114,103 +133,118 @@
     "            elif (linearray[0] == 'info'):\n",
     "                info_dict[linearray[1]] = linearray[2]\n",
     "            elif (linearray[0] == 'start'):\n",
-    "                thisbatter = np.empty((1,4),dtype=object)\n",
+    "                thisbatter = {}\n",
+    "                thisbatter['batter_id'] = linearray[1]\n",
+    "                thisbatter['batter_name'] = linearray[2]\n",
+    "                thisbatter['order'] = linearray[4]\n",
+    "                thisbatter['position'] = linearray[5]\n",
+    "\n",
     "                if (linearray[3] == '0'):\n",
-    "                    thisbatter[0,0] = linearray[1]\n",
-    "                    thisbatter[0,1] = linearray[2]\n",
-    "                    thisbatter[0,2] = linearray[4]\n",
-    "                    thisbatter[0,3] = linearray[5]\n",
-    "                    vis_start_list = np.vstack((vis_start_list, thisbatter))\n",
+    "                    vis_start_list.append(thisbatter)\n",
     "                elif (linearray[3] == '1'):\n",
-    "                    thisbatter[0,0] = linearray[1]\n",
-    "                    thisbatter[0,1] = linearray[2]\n",
-    "                    thisbatter[0,2] = linearray[4]\n",
-    "                    thisbatter[0,3] = linearray[5]\n",
-    "                    home_start_list = np.vstack((home_start_list, thisbatter))\n",
+    "                    home_start_list.append(thisbatter)\n",
     "                else:\n",
-    "                    print('NEITHER VISITOR NOR HOME????')\n",
+    "                    print('Neither visitor nor home!!!!')\n",
     "\n",
     "            elif (linearray[0] == 'data'):\n",
-    "                thisdata = np.empty((2),dtype=object)\n",
-    "                thisdata[0] = linearray[2]\n",
-    "                thisdata[1] = linearray[3]\n",
-    "                data_list = np.vstack((data_list,thisdata))\n",
+    "#                print(linearray)\n",
+    "                thisdata = {}\n",
+    "                thisdata['type'] = linearray[1]\n",
+    "                thisdata['player'] = linearray[2]\n",
+    "                thisdata['thevalue'] = linearray[3]\n",
+    "                data_list.append(thisdata)\n",
     "            else:\n",
-    "    #            print(linearray)\n",
-    "                thisevent = []\n",
-    "                thisevent.append(eventnum)\n",
-    "                thisevent.append(linearray[0])  # say what type of event: play/com/sub/etc.\n",
-    "                if (linearray[0] == 'play'):\n",
-    "                    for i in range(1,7):\n",
-    "                        thisevent.append(linearray[i])\n",
-    "                    for i in range(8,12):   # comment, sub_batting_order, sub_position empty\n",
-    "                        thisevent.append('')\n",
-    "                elif (linearray[0] == 'com'):\n",
-    "                    for i in range(1,7):\n",
-    "                        thisevent.append('')\n",
-    "                    thisevent.append(linearray[1])\n",
-    "                    for i in range(9,12):\n",
-    "                        thisevent.append('')\n",
-    "                elif (linearray[0] == 'sub'):\n",
-    "                    thisevent.append('')    # inning, fill in later\n",
-    "                    thisevent.append('')    # batting team (vis/home), fill in later\n",
-    "                    thisevent.append(linearray[1])  # playerID of player coming in\n",
-    "                    for i in range(4,8):\n",
-    "                        thisevent.append('')  # count/pitches/result/comment all blank\n",
-    "                    thisevent.append(linearray[3]) # batting or fielding sub\n",
-    "                    thisevent.append(linearray[4]) # sub's batting order\n",
-    "                    thisevent.append(linearray[5]) # sub's fielding position\n",
-    "                elif (linearray[0] == 'badj'):\n",
-    "                    badj_games.append(thisgamedict['id'])\n",
-    "                    thisevent.append('')    # inning, fill in later\n",
-    "                    thisevent.append('')  # visitor/home, fill in later\n",
-    "                    thisevent.append(linearray[1])  # playerID of adjusting batter                \n",
-    "                    for i in range(4,7):\n",
-    "                        thisevent.append('')  # count/pitches/result/comment all blank\n",
-    "                    thisevent.append(linearray[0]+\": \"+linearray[2]) # comment should say: \"badj: {hand adjusted to}\"\n",
-    "                    for i in range(8,11):\n",
-    "                        thisevent.append('')    # sub-related variables are empty\n",
+    "                thisevent = {}\n",
+    "                thisevent['event_in_game'] = eventnum\n",
+    "                thisevent['event_type'] = linearray[0]\n",
+    "                \n",
+    "                if (thisevent['event_type'] == 'com'):\n",
+    "                    thisevent['comment'] = linearray[1]\n",
+    "                    \n",
+    "                elif (thisevent['event_type'] == 'sub'):\n",
+    "                    thisevent['sub_id'] = linearray[1]\n",
+    "                    thisevent['sub_team'] = linearray[3]\n",
+    "                    thisevent['sub_name'] = linearray[2]\n",
+    "                    thisevent['sub_batting_order'] = linearray[4]\n",
+    "                    thisevent['sub_position'] = linearray[5]\n",
+    "\n",
+    "                    if (thisevent['sub_team'] not in ('0','1')):\n",
+    "#                        print(linearray)\n",
+    "                        if ((thisyear == 1932) & (linearray[1] == 'watkg101')):\n",
+    "                            thisevent['sub_team'] = linearray[4]\n",
+    "                            thisevent['sub_batting_order'] = linearray[5]\n",
+    "                            thisevent['sub_position'] = linearray[6]                     \n",
+    "                        elif ((thisyear == 1942) & (linearray[1] == 'trotb101')):\n",
+    "                            thisevent['sub_team'] = 1\n",
+    "                        elif ((thisyear == 1944) & (linearray[1] == 'pylee101')):\n",
+    "                            thisevent['sub_team'] = linearray[4]\n",
+    "                            thisevent['sub_batting_order'] = linearray[5]\n",
+    "                            thisevent['sub_position'] = linearray[6]\n",
+    "                        elif ((thisyear == 1949) & (linearray[1] == 'burgs101')):\n",
+    "                            thisevent['sub_team'] = linearray[4]\n",
+    "                            thisevent['sub_batting_order'] = linearray[5]\n",
+    "                            thisevent['sub_position'] = linearray[6]\n",
+    "                        elif ((thisyear == 1965) & (linearray[1] == 'scher101')):\n",
+    "                            thisevent['sub_team'] = linearray[4]\n",
+    "                            thisevent['sub_batting_order'] = linearray[5]\n",
+    "                            thisevent['sub_position'] = linearray[6]                        \n",
+    "                        \n",
+    "                elif (thisevent['event_type'] == 'play'):\n",
+    "                    thisevent['inning'] = linearray[1]\n",
+    "                    thisevent['visitor_or_home'] = linearray[2]\n",
+    "                    thisevent['batter_id'] = linearray[3]\n",
+    "                    thisevent['pitch_count'] = linearray[4]\n",
+    "                    thisevent['pitch_sequence'] = linearray[5]\n",
+    "                    thisevent['event'] = linearray[6]\n",
+    " \n",
+    "                elif (thisevent['event_type'] == 'badj'):\n",
+    "                    ladj_games.append(thisgamedict['id'])\n",
+    "                    thisevent['adjusting_batter_id'] = linearray[0]\n",
+    "                    thisevent['adjusting_batter_hand'] = linearray[1]\n",
+    "\n",
     "                elif (linearray[0] == 'padj'):\n",
     "                    padj_games.append(thisgamedict['id'])\n",
-    "                    thisevent.append('')    # inning, fill in later\n",
-    "                    thisevent.append('')  # visitor/home, fill in later\n",
-    "                    thisevent.append(linearray[1])  # playerID of adjusting batter                \n",
-    "                    for i in range(4,7):\n",
-    "                        thisevent.append('')  # count/pitches/result/comment all blank\n",
-    "                    thisevent.append(linearray[0]+\": \"+linearray[2]) # comment should say: \"padj: {hand adjusted to}\"\n",
-    "                    for i in range(8,11):\n",
-    "                        thisevent.append('')    # sub-related variables are empty\n",
+    "                    thisevent['adjusting_pitcher_id'] = linearray[0]\n",
+    "                    thisevent['adjusting_pitcher_hand'] = linearray[1]\n",
+    "\n",
     "                elif (linearray[0] == 'ladj'):\n",
     "                    ladj_games.append(thisgamedict['id'])\n",
-    "                    thisevent.append('')    # inning, fill in later\n",
-    "                    thisevent.append(linearray[1])  # visitor/home\n",
-    "                    for i in range(3,7):\n",
-    "                        thisevent.append('')  # playerID/count/pitches/result/comment all blank\n",
-    "                    thisevent.append(linearray[0]+\": \"+linearray[2]) # comment should say: \"ladj: {whatever}\"\n",
-    "                    thisevent.append(linearray[1])  # visitor/home - team making adjustment\n",
-    "                    for i in range(9,11):\n",
-    "                        thisevent.append('')    # sub-related variables are empty\n",
-    "                else:\n",
-    "                    print(linearray)\n",
-    "                events = np.vstack((events,thisevent))\n",
-    "                eventnum = eventnum + 1\n",
+    "#                    print(linearray)\n",
+    "                    thisevent['visitor_or_home'] = linearray[1]\n",
+    "                    thisevent['actual_order_of_wrong_batter'] = linearray[2]\n",
+    "#                    pprint(thisevent)\n",
     "\n",
+    "                else:\n",
+    "                    print('event type is weird!')\n",
+    "                events.append(thisevent)\n",
+    "                eventnum = eventnum + 1                    \n",
+    "                \n",
     "    # add data for the final game, which we missed above\n",
     "    thisgamedict['info'] = info_dict\n",
-    "    thisgamedict['visiting_starters'] = vis_start_list.tolist()\n",
-    "    thisgamedict['home_starters'] = home_start_list.tolist()\n",
-    "    thisgamedict['events'] = events.tolist()\n",
-    "    thisgamedict['data'] = data_list.tolist()\n",
+    "    thisgamedict['visiting_starters'] = vis_start_list\n",
+    "    thisgamedict['home_starters'] = home_start_list\n",
+    "    thisgamedict['events'] = events\n",
+    "    thisgamedict['data'] = data_list\n",
+    "    \n",
     "    allgames.append(thisgamedict)\n",
     "\n",
-    "    print('{0:.0f}: processed {1:,.0f} games!'.format(thisyear,len(allgames)))\n",
+    "    print('{0:.0f}: processed {1:,.0f} games.'.format(thisyear,len(allgames)))\n",
     "\n",
     "    outfilename = 'raw/events_raw_{:.0f}.json'.format(thisyear)\n",
     "    with open(outfilename, 'w') as f:\n",
     "        json.dump(allgames, f)\n",
-    "    print('File written:',outfilename)\n",
-    "    print('\\n')"
+    "    print('File written:',outfilename,'!')\n",
+    "print('Done!')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
